--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
     <h2>Our Portfolio</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
-        <h3>Project 1</h3>
+        <h3>Chainbased</h3>
         <p>Details about the first crypto node project.</p>
       </div>
       <div class="portfolio-item">
-        <h3>Project 2</h3>
+        <h3>Elixir Network</h3>
         <p>Details about the second crypto node project.</p>
       </div>
       <div class="portfolio-item">
-        <h3>Project 3</h3>
+        <h3>Rivalz Network</h3>
         <p>Details about the third crypto node project.</p>
       </div>
     </div>
